--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -106,31 +106,18 @@
     <h1>Rapport de mise à jour</h1>
   </section>
   <section class="grid-1">
-    <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos</p>
-    <h2>Mise à jour du 30 juillet 2024 </h2>
+    <p>Consultez les dernières modifications et améliorations apportées.</p>
+    <h2>Mise à jour du 15 août 2024</h2>
     <h3>Nouveautés</h3>
-    <p>• Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing ,
+    <p>• Ajout de <span class="black medium">l'e-mail de confirmation</span> pour la création de compte.<br>
+      • Ajout du <span class="black medium">mot de passe oublié</span> pour la connexion à un compte.<br>
     </p>
     <h3>Corrections</h3>
-    <p>• Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing ,
+    <p> • Correction des <span class="black medium">boutons de retour</span>.<br>
+      • Correction d'un bug qui empêchait de <span class="black medium">voir les notifications</span>.
     </p>
-    <h2>Mise à jour du 27 juillet 2024 </h2>
-    <h3>Nouveautés</h3>
-    <p>• Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing ,
-    </p>
+    <h2>Mise à jour du 14 août 2024</h2>
+    <p>  • Lancement de la <span class="black medium">bêta fermée</span> avec les fonctionnalités de base.</p>
     <h3>Corrections</h3>
-    <p>• Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing , <br>
-      • Porem ipsum dolor sit amet, consectetur adipiscing ,
-    </p>
+    <p> • Correction des <span class="black medium">images non affichées</span>.</p>
   </section>
