--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,16 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>
+  <% if @user.firstname.present? && @user.lastname.present? %>
+    Bonjour <%= "#{@user.firstname} #{@user.lastname}" %>,
+  <% elsif @user.firstname.present? %>
+    Bonjour <%= @user.firstname %>,
+  <% else %>
+    Bonjour <%= @user.email %>,
+  <% end %>
+</p>
+<p>Nous avons reçu une demande de réinitialisation de mot de passe pour votre compte. Si vous n'êtes pas à l'origine de cette demande, veuillez ignorer ce message.</p>
+<p>Pour réinitialiser votre mot de passe, cliquez sur le lien ci-dessous :</p>
+<p><%= link_to 'Réinitialiser mon mot de passe', edit_password_url(@user, reset_password_token: @token) %></p>
+<p>Ce lien est valable pendant <%= Devise.reset_password_within %> heures. Après expiration, vous devrez faire une nouvelle demande de réinitialisation si vous avez toujours besoin d'aide.</p>
+<p>Si vous avez besoin d'aide supplémentaire ou si vous avez des questions, n'hésitez pas à contacter notre support technique à omniscientdesign.co@gmail.com.</p>
+<p>Merci,</p>
+<p>L’équipe Omniscient Design</p>
