--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -156,6 +156,7 @@
   #back-btn{
     background: none;
     border: none;
+    cursor: pointer;
   }
 </style>
 <div class="body-show" id="<%= dom_id designer %>">
