--- a/app/views/users/mailer/email_changed.html.erb
+++ b/app/views/users/mailer/email_changed.html.erb
@@ -1,7 +1,23 @@
-<p>Hello <%= @email %>!</p>
-
+<p>Bonjour <%= @email %>,</p>
 <% if @resource.try(:unconfirmed_email?) %>
-  <p>We're contacting you to notify you that your email is being changed to <%= @resource.unconfirmed_email %>.</p>
+  <p>
+    Nous vous contactons pour vous informer que votre adresse e-mail est en cours de modification.
+    La nouvelle adresse e-mail sera : <%= @resource.unconfirmed_email %>.
+    Veuillez suivre les instructions envoyées à cette nouvelle adresse pour confirmer le changement.
+  </p>
 <% else %>
-  <p>We're contacting you to notify you that your email has been changed to <%= @resource.email %>.</p>
+  <p>
+    Nous vous informons que votre adresse e-mail a été modifiée avec succès.
+    La nouvelle adresse associée à votre compte est : <%= @resource.email %>.
+  </p>
 <% end %>
+<p>
+  Si vous n'avez pas demandé ce changement, veuillez contacter notre support immédiatement.
+</p>
+<p>
+  Merci pour votre attention.
+</p>
+<p>
+  Cordialement,<br>
+  L'équipe Omniscient Design
+</p>
