--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -51,37 +51,19 @@
   .actions {
     margin-left: auto; /* Pour aligner à droite */
   }
-
-
-  .password-container {
-    position: relative;
-  }
-
-  .password-container .toggle-password {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    fill:#202020;
-  }
 </style>
 <div class="main-div log" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <section class="box-log">
     <h1>Mot de passe oublié ?</h1>
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-      <div class="actions">
-        <%= f.submit "Send me reset password instructions" %>
-      </div>
-    <% end %>
-    <%= render "devise/shared/links" %>
+    <div class="form">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "Recevoir les instructions", class:"button dark btn-login" %>
+        </div>
+      <% end %>
+    </div>
   </section>
 </div>
