--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,12 +1,78 @@
-<h2>Resend confirmation instructions</h2>
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-<%= render "devise/shared/links" %>
+<style>
+  .logo-log {
+    position: absolute;
+    left: 35px;
+    top: 35px;
+  }
+
+  .log {
+    position: relative;
+    background-image: url('/assets/bg-presentation.png');
+    background-repeat: no-repeat;
+    height: 100vh;
+  }
+
+  .box-log {
+    position: absolute;
+    bottom: 35px;
+    padding: 0px 8vw
+  }
+
+  .form {
+    margin-top: 32px;
+    width: 60vw;
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 30px 0;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
+
+  form {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+  }
+
+    .sign-up-in{
+  color: #fff;
+    }
+    .sign-up-in:hover{
+  text-decoration: underline;
+    }
+
+     .sign-up-in{
+  text-align: center;
+     }
+    .btn-login {
+  margin-top: 16px;
+  width: 22vw;
+  height: 65px;
+    }
+
+    .actions {
+  margin-left: auto; /* Pour aligner à droite */
+    }
+</style>
+<div class="main-div log" style="color:#FFF; min-height:100vh;">
+  <%= image_tag "logo-white.svg", alt: "", class: "logo-log" %>
+  <section class="box-log">
+    <h1>Recevoir l'email de confirmation</h1>
+    <div class="form">
+      <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), placeholder: :email %>
+        </div>
+        <div class="actions">
+          <%= f.submit "Renvoyer l'email", class:"button dark btn-login" %>
+        </div>
+        <%= link_to "Se connecter", new_user_session_path, class: "sign-up-in" %>
+      <% end %>
+    </div>
+  </section>
+</div>
